--- a/app/views/payroll_categories/index.slim
+++ b/app/views/payroll_categories/index.slim
@@ -1,5 +1,5 @@
 #show_command
-  = link_to "new", new_payroll_category_path()
+  = link_to t("common.title.new"), new_payroll_category_path()
 h2 ...
 
 table#list-table
@@ -9,6 +9,6 @@ table#list-table
     th= PayrollCategory.human_attribute_name("title")
   - PayrollCategory.all.each do |payroll_category|
     tr.selectable onclick="location.href='#{payroll_category_path(payroll_category)}'"
-      td= payroll_category.prtype
-      td= payroll_category.code
+      td= t("payroll_categories.#{PayrollCategory::PAYROLL_TYPE.rassoc(payroll_category.prtype)[0]}")
+      td= t("payroll_categories.#{PayrollCategory::PAYROLL_CODE.rassoc(payroll_category.code)[0]}")
       td= payroll_category.title
