--- a/app/views/payroll_categories/show.slim
+++ b/app/views/payroll_categories/show.slim
@@ -8,10 +8,10 @@ h3= "Payroll Category"
   table
     tr
       th= PayrollCategory.human_attribute_name(:prtype)
-      td= payroll_category.prtype
+      td= t("payroll_categories.#{PayrollCategory::PAYROLL_TYPE.rassoc(payroll_category.prtype)[0]}")
     tr
       th= PayrollCategory.human_attribute_name(:code)
-      td= payroll_category.code
+      td= t("payroll_categories.#{PayrollCategory::PAYROLL_CODE.rassoc(payroll_category.code)[0]}")
     tr
       th= PayrollCategory.human_attribute_name(:title)
       td= payroll_category.title
