--- a/app/views/bank_transactions/_list.html.slim
+++ b/app/views/bank_transactions/_list.html.slim
@@ -7,7 +7,7 @@ table#list-table
     th= BankTransaction.human_attribute_name(:note)
     th= BankTransaction.human_attribute_name(:remain)
     th= BankTransaction.human_attribute_name(:branchname)
-    - unless @preview
+    - if menu
       th= t('common.menu')
   - bank_transactions.each do |transaction|
     tr.selectable
@@ -24,7 +24,7 @@ table#list-table
       td class="numrow"
         = number_to_currency transaction.remain
       td= transaction.branchname
-      - unless @preview
+      - if menu
         td align="right"
           - if transaction.transfer
             = link_to t('bank_transactions.show.to_bank_transfer'), [bank_account, transaction.transfer]
