--- a/app/views/bank_transfers/index.html.slim
+++ b/app/views/bank_transfers/index.html.slim
@@ -5,10 +5,11 @@
   = link_to t('bank_transfers.excel.link'), [:excel, bank_account, :bank_transfers]
   = " | "
   = link_to t('common.title.back'), :bank_accounts
+
 h2 #{bank_account.name}: #{bank_account.number}
 
 - unless bank_transfers.empty?
-  = render 'list'
+  = render 'list', menu: false
 
   br
   center
