--- a/app/views/bank_transfers/preview.html.slim
+++ b/app/views/bank_transfers/preview.html.slim
@@ -2,13 +2,18 @@
   = link_to t('common.title.back'), [bank_account, :bank_transfers]
 h2 ..
 
-= form_tag [:preview, bank_account, bank_transfer], multipart: true, class: "tabular" do
+= form_tag [:excel, bank_account, bank_transfer], multipart: true, class: "tabular" do
   .box
     p
       = label_tag :bank_type, t('.type')
       = select_tag :bank_type, options_for_select(BankTransfer::BANK_LIST, params[:bank_type])
     p
       = label_tag :file, t('.file')
-      = file_field :upload, :file
+      = text_field_tag :upload, params[:upload][:file].original_filename
     p
-      = submit_tag "미리보기"
+      = submit_tag t('.submit')
+
+br
+
+h3 프리뷰
+= render 'list', bank_transfers: @transfers, menu: false
