--- a/app/views/business_clients/show.html.erb
+++ b/app/views/business_clients/show.html.erb
@@ -30,7 +30,7 @@
             <td align="right">
               <% @business_client.taxmen.map do |taxman| %>
                 <%= taxman.fullname %>
-
+                <%= link_to "[수정]", find_contacts_path(:target_class => Taxman, target: taxman, parent_class: @business_client.class, parent: @business_client), :class => 'popup' %>
                 <%= link_to "[삭제]", [@business_client, taxman], confirm: "Are you sure?", :method => :delete %>
                 <br>
               <% end %>
@@ -38,7 +38,9 @@
           <% else %>
             <td><p><%= t('taxmen.empty') %></p></td>
           <% end %>
-          <td><%= link_to "담당자 추가하기", find_contacts_path(:target_class => @business_client.class, target: @business_client), :class => 'popup' %></td>
+          <td>
+            <%= link_to "담당자 추가하기", find_contacts_path(:target_class => Taxman, parent_class: @business_client.class, parent: @business_client), :class => 'popup' %>
+            <%#= link_to "담당자 추가하기", find_contacts_path(:target_class => @business_client.class, target: @business_client), :class => 'popup' %></td>
         </tr>
       </table>
     </div>
