--- a/app/views/contacts/find.html.slim
+++ b/app/views/contacts/find.html.slim
@@ -2,7 +2,9 @@
 - content_for :search do
   = form_tag({:action => "find"}, :method => :get ) do
     = hidden_field_tag 'target_class', params[:target_class]
-    = hidden_field_tag 'target', @target.id
+    = hidden_field_tag 'target', params[:target]
+    = hidden_field_tag 'parent_class', params[:parent_class]
+    = hidden_field_tag 'parent', params[:parent]
     = t("common.title.search")
     = " : "
     = text_field_tag 'query', params[:query]
@@ -26,7 +28,7 @@ h2 ..
         td= contact.department
         td= contact.position
         td
-          = link_to "선택하기", select_contact_path(contact, :target_class => params[:target_class], :target => @target), :method => :put
+          = link_to "선택하기", select_contact_path(contact, :target_class => params[:target_class], :target => params[:target], :parent_class => params[:parent_class], :parent => params[:parent]), :method => :put
 - else
   h4= t('.empty')
 
