--- a/app/views/card_approved_sources/excel.html.slim
+++ b/app/views/card_approved_sources/excel.html.slim
@@ -2,7 +2,7 @@
   = link_to t('common.title.back'), [creditcard, :card_approved_sources]
 h2 ..
 
-= form_tag [:excel, creditcard, card_approved_source], multipart: true, class: "tabular" do
+= form_tag [:preview, creditcard, card_approved_source], multipart: true, class: "tabular" do
   .box
     p
       = label_tag :file, t('.file')
