--- a/app/views/creditcards/index.html.erb
+++ b/app/views/creditcards/index.html.erb
@@ -2,6 +2,8 @@
 <div id="show_command">
   <%= link_to t("creditcards.total.link"), [:total, :creditcards] %>
   |
+  <%= link_to t("creditcards.excel.link"), [:excel, :creditcards] %>
+  |
   <%= link_to t("creditcards.new.title"), new_creditcard_path %>
 </div>
 <table id="list-table">
