fix title name. closes #8169

--- a/app/views/creditcards/total.html.erb
+++ b/app/views/creditcards/total.html.erb
@@ -14,7 +14,7 @@
     <tr>
       <th>날짜</th>
       <% Creditcard.all.each do |card| %>
-        <th><%= card.nickname %></th>
+        <th><%= card.cardno %></th>
       <% end %>
     </tr>
   </thead>
