--- a/app/views/cardbills/index.html.erb
+++ b/app/views/cardbills/index.html.erb
@@ -3,10 +3,10 @@
 <% content_for :search do -%>
   <%= form_tag :cardbills, :method => :get do %>
     <%= t("common.title.search") %> : <%= text_field_tag 'q', params[:q] %>
-    <%= select_tag :creditcard_id, 
-			options_from_collection_for_select([Creditcard.new(:cardno => "all")]+Creditcard.all, :id, :cardno_long, params[:creditcard_id]),
-			"onchange" => "this.form.submit()"
-		%>
+    <%= select_tag :creditcard_id,
+      options_from_collection_for_select([Creditcard.new(:cardno => "all")]+Creditcard.all, :id, :cardno_long, params[:creditcard_id]),
+      "onchange" => "this.form.submit()"
+    %>
   <% end -%>
 <% end -%>
 
@@ -26,7 +26,7 @@
   </tr>
 
 <% @cardbills.each do |cardbill| %>
-  <tr class="selectable" onclick="location.href='<%= cardbill_path(cardbill) %>'">
+  <tr class="selectable <%= cardbill.status %>" onclick="location.href='<%= cardbill_path(cardbill) %>'">
     <td><span><%=h cardbill.cardno_long %></span></td>
     <td><%= cardbill.transdate.strftime("%Y.%m.%d %H:%M:%S %p") %></td>
     <td class="numrow"><%= number_to_currency cardbill.totalamount %></td>
