--- a/app/assets/stylesheets/card.css.scss
+++ b/app/assets/stylesheets/card.css.scss
@@ -1,7 +1,7 @@
-.not-connected-to-approved-sources {
+.not-connected-to-sources {
   background-color: #CACACA;
 }
 
-.misnatch-approved-sources{
+.misnatch-sources{
   background-color: red;
 }
