--- a/app/views/shared/_show_attachment.html.erb
+++ b/app/views/shared/_show_attachment.html.erb
@@ -1,31 +1,47 @@
-<% 
-	if show_attachment.class.name == 'Attachment'
-		attachments = [show_attachment]
-	else
-		attachments = Attachment.for_me(show_attachment)
-	end
+<%
+  if show_attachment.class.name == 'Attachment'
+    attachments = [show_attachment]
+  else
+    attachments = Attachment.for_me(show_attachment)
+  end
 
-	at = params[:at].to_i || 0
-	if @attachments && at < @attachments.count
-		attachment = @attachments[at] 
+  at = params[:at].to_i || 0
+  if @attachments && at < @attachments.count
+    attachment = @attachments[at]
 %>
 <div id="attach">
-			<img src="<%= url_for(:controller => "attachments", :action => 'picture', :id => attachment.id, :w => "600", :h => "800") %>" />
-	<% end %>
-			<center>
-	<% if @attachments && at < @attachments.count %>
-				<%= link_to t(".download"), :controller => "attachments", :action => "download", :id => attachment.id %> ... 
-	<% end %>
-				<% if @attachments %>
-					<% 0.upto(@attachments.count - 1) do |i| %>
-						<% if i == params[:at].to_i %>
-							<u><%= (i+1) %></u>
-						<% else %>
-							<%= link_to (i+1).to_s, :at => i %>
-						<% end %>
-					<% end %>
-				<% end %>
-			</center>
+      <img src="<%= url_for(:controller => "attachments", :action => 'picture', :id => attachment.id, :w => "600", :h => "800") %>" />
+  <% end %>
+      <center>
+  <% if @attachments && at < @attachments.count %>
+        <%= link_to t(".download"), :controller => "attachments", :action => "download", :id => attachment.id %> ...
+  <% end %>
+        <% if @attachments %>
+          <% 0.upto(@attachments.count - 1) do |i| %>
+            <% if i == params[:at].to_i %>
+              <u><%= (i+1) %></u>
+            <% else %>
+              <%= link_to (i+1).to_s, {:at => i, :attachment_id => @attachments[i].id}, :class => "move-attachment"  %>
+            <% end %>
+          <% end %>
+        <% end %>
+      </center>
 </div>
+
+<% content_for :javascript do %>
+<script type="text/javascript">
+  $(function(){
+    // $('.move-attachment').click(function(e){
+    //   e.preventDefault();
+    //   var params = $(e.target).data('url').split('&');
+    //   var id = params[params.length - 1];
+    //   console.log(id)
+    //   var imageUrl = "<%= url_for(:controller => 'attachments', :action => 'picture', :id => 51, :w => "600", :h => "800") %>";
+    //   $('#attach img').attr('src', imageUrl);
+    // });
+
+  });
+</script>
+<% end %>
 
 
