--- a/app/views/taxbills/index.html.erb
+++ b/app/views/taxbills/index.html.erb
@@ -37,9 +37,18 @@
     <% taxbills_pagination.each do |taxbill| %>
       <tr class="selectable" onclick="location.href='<%= taxbill_path(taxbill) %>'">
         <td><%=h taxbill.billtype == 'purchase' ? t('taxbills.purchase_bill') : t('taxbills.sales_bill') %></td>
-        <td><%=h taxbill.transacted_at.strftime("%Y-%m-%d") %></td>
-        <td><span><%=h taxbill.taxman.business_client.name %></span></td>
-        <td><span><%=h taxbill.taxman.business_client.owner %></span></td>
+        <% if taxbill.transacted_at %>
+          <td><%=h taxbill.transacted_at.strftime("%Y-%m-%d") %></td>
+        <% else %>
+          <td></td>
+        <% end %>
+        <% if taxbill.taxman %>
+          <td><span><%=h taxbill.taxman.business_client.name %></span></td>
+          <td><span><%=h taxbill.taxman.business_client.owner %></span></td>
+          <% else %>
+            <td></td>
+            <td></td>
+        <% end %>
         <td class="numrow"><%=h number_to_currency taxbill.total %></td>
       </tr>
     <% end %>
