--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,5 +1,5 @@
 <%#= stylesheet_link_tag 'main', :cache => true %>
-
+<% title "-" %>
 <div id="login-form">
   <%= form_tag do %>
     <div class="box">
@@ -16,6 +16,6 @@
   <% end %>
 </div>
 
-<div class='login-link'>
+<div class='login-link' style="text-align: center;">
   <h4><%= link_to "or login with Google", '/auth/google' %></h4>
 </div>
