--- a/app/views/creditcards/show.html.erb
+++ b/app/views/creditcards/show.html.erb
@@ -44,22 +44,10 @@
   </div>
   <%= render :partial => "shared/show_attachment", :object => @creditcard  %>
   <div style="clear:both;">
-  	
-		<% if @user.ingroup? "admin" %>
-		    <h3><%= t(".changes") %></h3>
-		    <% if !@creditcard.change_histories.blank? %>
-		    <ul>
-		      <% for history in @creditcard.change_histories.all(:order => "updated_at DESC") %>
-		        <li>[<%= history.updated_at.strftime("%Y.%m.%d %H:%M:%S %p") %>] 
-									<%= Creditcard.human_attribute_name(history.fieldname) %>:
-									<%= history.before_value %> &rarr;	
-									<%= history.after_value %> (<%= history.user.name %>)</li>
-		      <% end %>
-		    </ul>
-		    <% else %>
 
-		    <% end %>
-		<% end %>
+    <% if @user.ingroup? "admin" %>
+      <%= render 'changelog', target: @creditcard %>
+    <% end %>
 
   </div>
 
