--- a/app/views/taxbills/total.html.erb
+++ b/app/views/taxbills/total.html.erb
@@ -12,18 +12,33 @@
   <% header = Array.new([purchase_list.size, sales_list.size, card_list.size].max) %>
 
   <% unless header.empty? %>
-    <h3><%= t('.quarter', year: current_year.year, quarter: quarter+1)%></h3>
+    <h3><%= t('.quarter', year: current_year.year, quarter: quarter+1)%> :
+				<%= number_to_currency sales_list.sum{|sales| sales[:tax]} - (purchase_list.sum{|purchase| purchase[:tax]} + card_list.sum{|card| card[:tax]}) %>
+        </h3>
     <table id="list-table">
       <thead>
         <tr>
-          <th colspan="3"><%= t('.purchase') %></th>
           <th colspan="3"><%= t('.sale') %></th>
+          <th colspan="3"><%= t('.purchase') %></th>
           <th colspan="2"><%= t('.card') %></th>
         </tr>
       </thead>
       <tbody>
         <% header.zip(purchase_list, sales_list, card_list).each do |_, purchase, sale, card| %>
           <tr>
+            <% if sale %>
+	            <td>
+	                <%= sale[:name] %> :
+	            </td>
+	            <td class="numrow">
+	              <%= number_to_currency sale[:tax] %>
+	            </td>
+	            <td class="numrow">
+	              <%= number_to_currency sale[:price] %>
+	            </td>
+						<% else %>
+							<td colspan="3"></td>
+						<% end %>	
             <% if purchase %>
               <td>
                 <%= purchase[:name] %> :
@@ -35,32 +50,33 @@
                 <%= number_to_currency purchase[:price] %>
               </td>
             <% else %>
-              <td></td>
-              <td></td>
+              <td colspan="3"></td>
             <% end %>
-            <td>
-              <% if sale %>
-                <%= sale[:name] %> :
-              <% end %>
-            </td>
-            <td class="numrow">
-              <%= number_to_currency sale[:tax] %>
-            </td>
-            <td class="numrow">
-              <%= number_to_currency sale[:price] %>
-            </td>
-            <td>
             <% if card %>
-              <%= card[:name] %> :
-            <% end %>
-            </td>
-            <td class="numrow">
-              <%= number_to_currency card[:tax] %>
-            </td>
+	            <td>
+	              <%= card[:name] %> :
+	            </td>
+	            <td class="numrow">
+	              <%= number_to_currency card[:tax] %>
+	            </td>
+						<% else %>
+							<td colspan="2"></td>
+						<% end %>
           </tr>
         <% end %>
-        <tr>
+        <tr style="background-color: yellow;">
+          
           <td>
+            <%= t('common.total') %>
+          </td>
+          <td class="numrow">
+            <%= number_to_currency sales_list.sum{|sales| sales[:tax]} %>
+          </td>
+          <td class="numrow">
+            <%= number_to_currency sales_list.sum{|sales| sales[:price]} %>
+          </td>
+          
+					<td>
             <%= t('common.total') %>
           </td>
           <td class="numrow">
@@ -74,22 +90,13 @@
             <%= t('common.total') %>
           </td>
           <td class="numrow">
-            <%= number_to_currency sales_list.sum{|sales| sales[:tax]} %>
-          </td>
-          <td class="numrow">
-            <%= number_to_currency sales_list.sum{|sales| sales[:price]} %>
-          </td>
-          
-          <td>
-            <%= t('common.total') %>
-          </td>
-          <td class="numrow">
             <%= number_to_currency card_list.sum{|card| card[:tax]} %>
           </td>
         </tr>
       </tbody>
     </table>
   <% end %>
+	<p />
 <% end %>
 
 <h4><%= t('.list')%></h4>
