--- a/app/views/contacts/show.html.slim
+++ b/app/views/contacts/show.html.slim
@@ -7,7 +7,7 @@
   = link_to t('common.title.back'), :contacts
 
 
-h2 #{contact.firstname} #{contact.lastname}
+h2 #{contact.name}
 
 .box
   #descr
