--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,15 +14,15 @@
 	<table>
 		<tr>
 			<th>Gmail Account<th>
-			<td><%= @user.gmail_account %></td>
+			<td><%= @this_user.gmail_account %></td>
 		</th>
 		<tr>
 			<th>Email<th>
-			<td><%= @user.notify_email %></td>
+			<td><%= @this_user.notify_email %></td>
 		</th>
 		<tr>
 			<th>Boxcar Account<th>
-			<td><%= @user.boxcar_account %></td>
+			<td><%= @this_user.boxcar_account %></td>
 		</th>
 		
 	</table>
