--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -48,7 +48,7 @@
       </ul>
       <ul>
         <% if @user.ingroup?(:admin) %>
-          <li><%= link_to t("creditcards.index.title"), :creditcards %></li>
+          <li><%= link_to t("creditcards.title"), :creditcards %></li>
         <% end %>
         <% if @user.permission.any? {|perm| perm.name == 'cardbills'}  %>
           <li><%= link_to t("cardbills.index.title"), :controller => "cardbills" %></li>
