--- a/app/views/creditcards/total.html.erb
+++ b/app/views/creditcards/total.html.erb
@@ -21,7 +21,7 @@
   <tbody>
     <% while period > oldest %>
       <tr>
-        <td><%= period.strftime("%Y.%m.%d") %></td>
+        <td><%= period.strftime("%Y.%m") %></td>
           <% Creditcard.all.each do |card| %>
             <% used_sources = card.card_used_sources.where(approved_at: period.all_month) %>
             <td><%= number_to_currency used_sources.total_price %></td>
