--- a/app/views/bank_accounts/total.html.erb
+++ b/app/views/bank_accounts/total.html.erb
@@ -1,6 +1,7 @@
 <div id="show_command">
     <%= link_to t('common.title.back'), :bank_accounts %>
 </div>
+<h2><%= t(".title")%></h2>
 
 <% newest = BankAccount.newest_transaction %>
 <% oldest = BankAccount.oldest_transaction %>
@@ -9,16 +10,16 @@
 <table id="list-table">
   <thead>
     <tr>
-      <td><h3>날짜</h3></td>
+      <td></td>
       <% BankAccount.all.each do |account| %>
-        <td colspan="2"><h3><%= account.number %></h3></td>
+        <td colspan="2"><h3><%= account.number %><br />(<%= account.note %>)</h3></td>
       <% end %>
     </tr>
     <tr>
-      <th></th>
+      <th><%= t(".date")%></th>
       <% BankAccount.all.each do |account| %>
-        <th>입금액</th>
-        <th>출금액</th>
+        <th><%= t(".inmoney")%></th>
+        <th><%= t(".outmoney")%></th>
       <% end %>
     </tr>
   </thead>
