--- a/app/views/payments/index.html.slim
+++ b/app/views/payments/index.html.slim
@@ -11,11 +11,11 @@
   table#list-table
     tr
       th= User.human_attribute_name("name")
-      - users.each do |user|
+      - @users.each do |user|
         tr.selectable onclick="location.href='#{payment_path(user)}'"
           td=h user.name
 
   br
 
   center
-    = will_paginate users
+    = will_paginate @users
