--- a/app/views/users/my.html.erb
+++ b/app/views/users/my.html.erb
@@ -1,5 +1,7 @@
 <% title t(".title") %>
 <div id="show_command">
+  <%= link_to t("users.edit.title"), [:edit, @user]  %>
+  |
   <%= link_to t("users.changepw.title"), :action => "changepw", :id => @user  %>
 </div>
-<h2><%= t("common.title.show") %></h2>
+<%= render 'detail', :user => @user %>
