--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -24,9 +24,9 @@
           <li><%= link_to t("vacations.index.title"), vacation_path(@user) %></li>
         <% end %>
         <% if @user.ingroup?(:admin) %>
-          <li><%= link_to t("payments.index.title"), :payments %></li>
+          <li><%= link_to t("payments.title"), :payments %></li>
         <% else %>
-          <li><%= link_to t("payments.index.title"), payment_path(@user) %></li>
+          <li><%= link_to t("payments.title"), payment_path(@user) %></li>
         <% end %>
       </ul>
       <ul>
