--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,7 +10,7 @@
 
 <%= form_for(@user,
     :url => {:action => :update},
-    :html => {:multipart => true, :class => "tabular"}) do |f| %>
+    :html => {:multipart => true}) do |f| %>
   <%= f.error_messages %>
 <div class="box">
   <p>
